--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,20 @@
+/* colours -> https://mycolor.space/?hex=%23008C99&sub=1 */
 body {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container {
+  max-width: 500px;
+  min-height: 300px;
+
+  margin: 30px auto;
+  padding: 30px;
+  overflow: auto;
+
+  font-family: 'Zen Kurenaido', sans-serif;
+
+  border: 2px solid #0086ad;
+  border-radius: 12px;
+  box-shadow: 0px 4px 5px rgba(65, 124, 183, 0.5);
 }
