--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,8 @@ body {
 }
 
 .container {
-  max-width: 500px;
-  min-height: 300px;
+  max-width: 35rem;
+  min-height: 30rem;
 
   margin: 30px auto;
   padding: 30px;
