--- a/src/components/AddTask.styles.css
+++ b/src/components/AddTask.styles.css
@@ -1,25 +1,39 @@
 .input-field {
   display: flex;
   flex-direction: column;
+
+  font-size: 1.2rem;
 }
 
 .input-field > * + * {
   margin-top: 1rem;
 }
 
-.input-check {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: baseline;
+#add-task,
+#day-time,
+#reminder {
+  padding: 1rem;
+  margin-bottom: 1rem;
 
+  border: 2px solid rgba(36, 35, 27, 0.9);
+  border-radius: 8px;
+  box-shadow: 0px 3px 0px 0px rgba(21, 152, 182, 0.5);
+}
+
+.input-check {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: baseline;
+
+  font-size: 1.2rem;
 }
 
 #reminder {
-    margin-bottom: -0.1rem;
+  margin-bottom: -0.1rem;
 }
 
 .btn-add {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
