--- a/src/components/AddTask.styles.css
+++ b/src/components/AddTask.styles.css
@@ -50,6 +50,23 @@
 }
 
 .btn-add {
+  background-color: rgba(2, 170, 222, 0.3);
+  font-family: 'Zen Kurenaido', sans-serif;
+  font-size: 1.2rem;
+  padding: 0.5rem;
   margin-top: 1rem;
   margin-bottom: 1rem;
+
+  border: 2px solid #0086ad;
+  border-radius: 9px;
+  box-shadow: 0px 1px 0px 0px rgba(9, 188, 242, 0.7);
+
+  transition: all 0.3s;
+}
+
+.btn-add:hover {
+  box-shadow: 1px 3px 0px 1px rgba(5, 170, 220, 0.7);
+  cursor: pointer;
+
+  transform: translateY(-3%) translateX(-0.3%);
 }
